1.添加图片搜索工具（Bing Images），无白边，展示原图（murl原图结合图片代理下载，模拟用户访问高清原图） 2.PDF支持存储图片功能